# VibeProtocol

./: Cargo.toml  README.md
src/: base64_wrapper.rs  caesar.rs  lib.rs  sodium_wrapper.rs
tests/: base64_tests.rs  caesar_tests.rs  protocol_tests.rs  sodium_tests.rs
