[package]
name = "VibeProtocol"
version = "0.1.0"
edition = "2021"
authors = ["Olivier Flentge <opensource@aero.nu>"]
description = "Vibe Protocol is a secure, decentralized, and privacy-focused messaging protocol. Its designed using Sodium, Base64, and other cryptographic libraries to ensure the highest level of security and privacy."
license = "MIT"
repository = "https://github.com/vibechatorg/VibeProtocol"

[dependencies]
base64 = "0.22.0"
sodiumoxide = "0.2.7"

[lib]
path = "src/lib.rs"